2000-12-22  Adam Fedor  <fedor@gnu.org>

	* Source/GSFFCallInvocation.m: Remove powerpc specific defs

2000-12-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDistantObject.m: Modified DO_FORWARD_INVOCATION() macro
	and its uses so that they actually do what was intended :-)
	Also, modified implementation of methodSignatureForSelector: for
	ffcall library to prevent recursion.

2000-12-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/GSIMap.h: On initialisation set number of nodes
	to exactly equal capacity, for improved memory efficiency.
	* Source/Makefile.postamble: correct dependencies for GSIMap.
	* Source/GSCountedSet.m: Use map enumerator rather than messing with
	the internals of a GSIMap directly.
	* Source/GSSet.m: ditto
	* Source/NSConnection.m: ditto
	* Source/NSGDictionary.m: ditto
	* Source/NSNotificationCenter.m: ditto
	* Source/NSString.m: property list memory leak fixed.

2000-12-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSGAttributedString.m: Fix logic errors setting attributes.

2000-12-18  Adam Fedor  <fedor@gnu.org>

	* Source/Makefile.postamble (libgnustep.def): Rebuild manually
	rather than automatically.

2000-12-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Unicode.m: Tidied to conform to coding standards and changed
	to use ISOLatin1 as the default cString encoding.
	* Source/GSString.m: Fixed bug getting cString from unicode string -
	raise exception when it should.
	* Source/NSString.m: ditto.  Also use lossyCString in various
	places rather than cString.
 
2000-12-13  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/base/NSRange.h, Source/NSRange.m: Inlined 
	NSMakeRange.

2000-12-12  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSDebug.m (table_entry): Added peak field.
	(GSDebugAllocationAdd): Set peak counter if needed.
	(GSDebugAllocationClassList), (GSDebugAllocationTotal),
	(GSDebugAllocationPeak): New functions.
	* Headers/gnustep/base/NSDebug.h: Added corresponding