@@ -26,10 +26,19 @@
    Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111 USA.
 */
 
+#include <config.h>
+
+#ifdef	LIBXML2
+#include <libxml2/parser.h>
+#include <libxml2/parserInternals.h>
+#include <libxml2/SAX.h>
+#include <libxml2/HTMLparser.h>
+#else
 #include <libxml/parser.h>
 #include <libxml/parserInternals.h>
 #include <libxml/SAX.h>
 #include <libxml/HTMLparser.h>
+#endif
 
 #include <Foundation/GSXML.h>
 #include <Foundation/NSData.h>
