@@ -1,3 +1,12 @@
+2000-12-26  Adam Fedor  <fedor@gnu.org>
+
+	* configure.in: Look for libxml2 (patch from Kim Shrier
+	<kim@tinker.com>).
+	* Headers/gnustep/base/config.h.in: Define LIBXML2
+	* Headers/gnustep/base/GSXML.h: Include libxml2.h if found.
+	* Source/GSXML.m: Likewise.
+	* Tools/gsdoc.m: Likewise. (patches from Kim Shrier <kim@tinker.com>).
+
 2000-12-22  Adam Fedor  <fedor@gnu.org>
 
 	* Source/GSFFCallInvocation.m: Remove powerpc specific defs
